@@ -54,6 +54,7 @@ Guy Martin <gmsoft@tuxicoman.be>
 Robert Groenenberg <robert.groenenberg@broadforward.com>
 Denis Dowling <denis.dowling@hsd.com.au>
 Louis Benoit <louisbenoit@videotron.ca>
+Flavio Coelin <flavio.ceolin@intel.com>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
